--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
             <h2>Portfolio</h2>
             <div class="portfolio-items">
                 <div class="portfolio-item">
-                    <img src="https://via.placeholder.com/300" alt="Project 1">
-                    <h3>Project 1</h3>
-                    <p>Description of project 1.</p>
+                    <img src="https://iili.io/dGvK1Rf.png" alt="Project 1">
+                    <h3>La Cuisine</h3>
+                    <p>La Cuisine is a modern elgant website for anResurant.</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="https://via.placeholder.com/300" alt="Project 2">
-                    <h3>Project 2</h3>
-                    <p>Description of project 2.</p>
+                    <img src="https://iili.io/dGUFPIf.png" alt="Project 2">
+                    <h3>Cinexa Plus</h3>
+                    <p>Cinexa Plus is anOndemand Streaming Service.</p>
                 </div>
                 <div class="portfolio-item">
                     <img src="https://via.placeholder.com/300" alt="Project 3">
