--- a/index.html
+++ b/index.html
@@ -78,19 +78,24 @@
             <h2>Portfolio</h2>
             <div class="portfolio-items">
                 <div class="portfolio-item">
-                    <img src="https://iili.io/dGvK1Rf.png" alt="Project 1">
-                    <h3>La Cuisine</h3>
-                    <p>La Cuisine is a modern elgant website for anResurant.</p>
+                    <img src="https://res.cloudinary.com/dhl8eost7/image/upload/v1726156673/Pulse_wave_Smart_Watch_Website_pmmbka.png">
+                    <h3>PuleWave Smart Watch</h3>
+                    <p>PulseWave is a very smooth ui/ux design for a smart watch company website.</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="https://iili.io/dGUFPIf.png" alt="Project 2">
-                    <h3>Cinexa Plus</h3>
-                    <p>Cinexa Plus is anOndemand Streaming Service.</p>
+                    <img src="https://res.cloudinary.com/dhl8eost7/image/upload/v1726156696/Timeless_Web_Agency_Website_dqaimw.png" alt="Project 2">
+                    <h3>Timeless Web</h3>
+                    <p> Timeless Web is website for a online Agency which deals with web development marketing and promotion.</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="https://via.placeholder.com/300" alt="Project 3">
-                    <h3>Project 3</h3>
-                    <p>Description of project 3.</p>
+                    <img src="https://res.cloudinary.com/dhl8eost7/image/upload/v1726156683/Event_Potography_Wbesite_m5b5gn.png" alt="Project 3">
+                    <h3>Samuel Jhonson Event Photography</h3>
+                    <p>This is a website for a event phtography agency where the images that has been taken they share on to to their protfolio.</p>
+                </div>
+                  <div class="portfolio-item">
+                    <img src="https://res.cloudinary.com/dhl8eost7/image/upload/v1726156672/Portfolio_Website_Gray_Theme_stf9ly.png"> alt="Project 4">
+                    <h3>Porfolio Wbesite</h3>
+                    <p>This is a website for a web developer where they share their porfolio on their website.</p>
                 </div>
             </div>
         </div>
