--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <p>This is a website for a event phtography agency where the images that has been taken they share on to to their protfolio.</p>
                 </div>
                   <div class="portfolio-item">
-                    <img src="https://res.cloudinary.com/dhl8eost7/image/upload/v1726156672/Portfolio_Website_Gray_Theme_stf9ly.png"> alt="Project 4">
+                    <img src="https://res.cloudinary.com/dhl8eost7/image/upload/v1726156672/Portfolio_Website_Gray_Theme_stf9ly.png" alt="Project 4">
                     <h3>Porfolio Wbesite</h3>
                     <p>This is a website for a web developer where they share their porfolio on their website.</p>
                 </div>
